[tool.poetry]
name = "profiling-talk"
version = "0.1.0"
description = "Demo code for imporving performance by profiling"
authors = ["Nicklas Sedlock <nicklas@delphai.com>"]

[tool.poetry.dependencies]
python = "^3.9"
delphai-utils = {extras = ["config"], version = "0.2.28"}
requests = "^2.26.0"
httpx = "^0.18.2"
snakeviz = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
